-- nuget updates -- minor bug fixes- -- changed "settings menu" so it will open and collaps properly ( bootstrap 3 To 4 problem )

--- a/KDRSManagerRazor/wwwroot/css/site.css
+++ b/KDRSManagerRazor/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
+/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 body {
     padding-top: 50px;
@@ -13,15 +13,24 @@ body {
     padding-right: 15px;
 }
 
+.collapse {
+    display: none;
+    &.show: display: block;
+}
+}
 /* Carousel */
 .carousel-caption p {
     font-size: 20px;
     line-height: 1.4;
 }
-.navbar-inverse {
+
+.navbar {
     background-color: #fec620;
 }
 
+.navbar-toggler-icon {
+    background-color: green;
+}
 /* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
